<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/sixteen_dp"
    android:background="@color/hs_background_color"
    tools:context=".activities.ContentDisplayCH2Activity">

    <TextView
        android:textColor="@color/IndianRed"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:text="All Views in Android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                style="@style/MKB.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="@dimen/sixteen_dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/hs_top_bar_color"
                        android:text="@string/views_def"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:inputType=""
                        android:layout_marginTop="@dimen/six_dp"
                        android:text="TextView"
                        android:textSize="24sp"
                        android:textColor="@color/Orange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textColor="@color/Black"
                            android:layout_weight="1"
                            android:text="@string/simple_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <ImageButton
                            android:id="@+id/textview_ib"
                            android:src="@drawable/ic_code_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/text_view_image_button" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="@dimen/six_dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bold_text"
                            android:textColor="@color/Black"
                            android:textStyle="bold" />
                        <ImageButton
                            android:id="@+id/textviewbold_ib"
                            android:src="@drawable/ic_code_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/text_view_image_button" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/six_dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="italic"
                            android:layout_weight="1"
                            android:textColor="@color/Black"
                            android:text="@string/italic_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <ImageButton
                            android:id="@+id/textviewitalic_ib"
                            android:src="@drawable/ic_code_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/text_view_image_button" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/six_dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autoLink="all"
                            android:text="@string/linkified_text"
                            android:textColor="@color/Black"
                            android:textStyle="italic" />
                        <ImageButton
                            android:id="@+id/textviewlinkify_ib"
                            android:src="@drawable/ic_code_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/text_view_image_button" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="@dimen/six_dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_weight="1"
                            android:textColor="@color/Black"
                            android:text="@string/spacing_text"
                            android:layout_width="0dp"
                            android:letterSpacing="0.1"
                            android:lineSpacingExtra="@dimen/six_dp"
                            android:layout_height="wrap_content" />
                        <ImageButton
                            android:id="@+id/tvw_lineSpacing_and_padding_ib"
                            android:src="@drawable/ic_code_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/text_view_image_button" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/MKB.CardView"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="@dimen/sixteen_dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="EditText"
                        android:textSize="24sp"
                        android:textColor="@color/Orange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_weight="1"
                            android:hint="Enter the name..."
                            android:inputType="textPersonName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <ImageButton
                            android:id="@+id/edittext_name"
                            android:src="@drawable/ic_code_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/text_view_image_button" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_weight="1"
                            android:hint="Enter the password..."
                            android:inputType="textPassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <ImageButton
                            android:id="@+id/edittext_password"
                            android:src="@drawable/ic_code_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/text_view_image_button" />

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_weight="1"
                            android:hint="Enter the phone..."
                            android:inputType="phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <ImageButton
                            android:id="@+id/edittext_phone"
                            android:src="@drawable/ic_code_blue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/text_view_image_button" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>
</LinearLayout>